--- a/hello-world.html
+++ b/hello-world.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h3>Welcome to my website</h3>
+    <p>Welcome to my first website! I am about to embark 
+        on the exciting journey o
+        f learning how to code. Won't you join me?</p>
 </body>
 </html>
