--- a/hello-world.html
+++ b/hello-world.html
@@ -7,9 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>Welcome to my website</h3>
-    <p>Welcome to my first website! I am about to embark 
-        on the exciting journey o
-        f learning how to code. Won't you join me?</p>
+    <h1>Welcome To My Webpage</h1>
 </body>
 </html>
